GNOME Bugzilla – Bug 657306
in case of gnutls enabled: abort of libgcrypt is not found
Last modified: 2011-12-03 11:49:15 UTC
Created attachment 194677 [details] [review] Fix configure.ac to abort ig libgcrypt is not found Gnutls newer versions do no longer drag in libgcrypt automatically and as such we can not guarantee it's there. The attach patch changes the build system to abort if gnutls is specified to be used but libgcrypt not found. This avoids configure from passing just fine but the build failing later on.
Comment on attachment 194677 [details] [review] Fix configure.ac to abort ig libgcrypt is not found by "newer versions" you mean 3.x, right? in that case, we should work with either gcrypt or whatever the new crypto lib is called. IIRC, we don't use any gcrypt methods ourselves, so it's mostly a matter of just #ifdef'ing out the gcrypt initialization calls if gnutls isn't using gcrypt.
yes, I mean gnutls 3.0 the build failure is mostly for us #inclduing gcrypt.h. But I did not check if we use anything from this header.
glib-networking no longer directly depends on gcrypt