Remove explicit gcrypt references

gnutls 2.11 allows using nettle instead of gcrypt for crypto, and
gnutls 3.0 only supports nettle. But our gnutls code was making
explicit gcrypt calls to initialize gnutls thread-safety, which meant
we required gcrypt even if gnutls didn't.

Fortunately, gnutls 2.11 fixed this situation by initializing gcrypt
thread-safety by default (when using gcrypt), so we can just remove
all the explicit references to gcrypt from glib-networking (since we
already depend on gnutls 2.11 or later), and it all just works.

https://bugzilla.gnome.org/show_bug.cgi?id=657306